Fixed some issues for 11.0.1 release that where visible only in IE 11.

--- a/template-src/scss/main/_generics.scss
+++ b/template-src/scss/main/_generics.scss
@@ -199,7 +199,7 @@
 
         .align#{$infix}-right  {
             &.piece.full {
-                text-align: end;
+                text-align: right;
             }
             &.ls-row {
                 > ul {
